# micp_experiments

./: README.md
micp_complex_urban/: CMakeLists.txt  package.xml
micp_complex_urban/config/: urban02.yaml
micp_complex_urban/launch/: micp_complex_urban02.launch
micp_complex_urban/src/: car_static_transforms.cpp  compute_odometry.cpp  create_gt_transform.cpp
micp_convergence/: CMakeLists.txt  README.md  package.xml
micp_convergence/config/: avz.yaml  cubegrid.yaml
micp_convergence/launch/: micp_convergence_avz.launch
micp_convergence/src/: avz_pose_publisher.cpp  micp_convergence.cpp  sensor_poses_publisher.cpp
micp_experiments/: CMakeLists.txt  package.xml
micp_experiments_helper/: CMakeLists.txt  README.md  package.xml
micp_experiments_helper/src/: fuse_gps_imu.cpp
micp_hilti/: LAB_Survey_1.launch  LAB_Survey_1_gtonly.launch  LAB_Survey_1_micp_gtodom.launch  LAB_Survey_1_micp_imu.launch  LAB_Survey_2_gtonly.launch  LAB_Survey_2_micp_gtodom.launch  LAB_Survey_2_micp_imu.launch  README.md  uzh_tracking_area_run2_gtonly.launch  uzh_tracking_area_run2_micp_gtodom.launch  uzh_tracking_area_run2_micp_imu.launch  uzh_tracking_area_run5_gtonly.launch  uzh_tracking_area_run5_micp_gtodom.launch  uzh_tracking_area_run5_micp_imu.launch
micp_mulran/: CMakeLists.txt  README.md  package.xml
micp_mulran/kiss/: kiss_mulran_tracking.py
micp_mulran/launch/: kaist01.launch  kaist01_gt_only.launch  kaist01_micp_gps_imu.launch  kaist02.launch  kaist02_gt_only.launch  kaist02_micp_gps_imu.launch  kaist03.launch  kaist03_gt_only.launch  kaist03_micp_gps_imu.launch
micp_mulran/launch/untested/: micp_mulran_dcc01.launch  micp_mulran_dcc02.launch  micp_mulran_dcc03.launch  micp_mulran_riverside01.launch  micp_mulran_riverside02.launch  micp_mulran_riverside03.launch
micp_mulran/puma/: draw_results.py  puma_mulran_tracking.py
micp_mulran/puma/results/: KAIST02_eval.txt  KAIST03_eval.txt  info.md
micp_mulran/puma/results/p2l/: KAIST01_eval.txt
micp_mulran/rviz/: micp_mulran.rviz
micp_mulran2/: CMakeLists.txt  README.md  package.xml
micp_mulran2/include/micp_mulran2/: dataset_loading.h  voxel_filter.hpp
micp_mulran2/launch/: closest_point_test.launch  kaist01.launch  kaist02.launch  kaist03.launch
micp_mulran2/rviz/: kaist.rviz
micp_mulran2/src/: closest_point_test.cpp  dataset_loading.cpp  micp_mulran2_node.cpp
