<?xml version="1.0"?>
<package format="2">
  <name>micp_experiments</name>
  <version>1.0.0</version>
  <description>The micp_experiments meta package</description>

  <maintainer email="amock@uos.de">Alexander Mock</maintainer>

  <license>BSD-3</license>

  <author email="amock@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>micp_hilti</exec_depend>
  <exec_depend>micp_mulran</exec_depend>
  <exec_depend>micp_gazebo</exec_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
