<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micp_mulran2</name>
  <version>1.0.0</version>
  <description>The micp_mulran2 package</description>

  <maintainer email="amock@uos.de">Alexander Mock</maintainer>

  <license>BSD</license>
  <author email="amock@uos.de">Alexander Mock</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend version_gte="2.0.0">rmcl</depend>
  <depend version_gte="2.0.0">rmcl_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_localization</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>